Restructuración de las slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -17,7 +17,9 @@
     -->
 
 	<!-- SEO -->
-	<title>Aprendiendo VueJS: Un ejemplo práctico de cómo usarlo</title>
+	<title>Aprendiendo VueJS: Un ejemplo práctico de cómo usarlo
+		
+	</title>
 	<meta name="description" content="WebSlides is the easiest way to make HTML presentations, portfolios, and landings. Just essential features.">
 
 	<!-- URL CANONICAL -->
