Reordenación de la portada

--- a/slides/index.html
+++ b/slides/index.html
@@ -82,12 +82,10 @@
 </head>
 
 <body>
-
-
 	<main role="main">
 		<article id="webslides">
 
-			<section class="bg-gray aligncenter">
+			<section class="bg-black-blue aligncenter">
 				<span class="background dark" style="background-image:url('static/images/bg/cover.jpg')"></span>
 				<div class="wrap">
 					<h1 class="text-landing text-shadow">
@@ -97,7 +95,7 @@
 						Un ejemplo práctico de cómo usarlo
 					</p>
 				</div>
-				<footer class="bg-trans-dark">
+				<footer>
 					<div class="wrap">
 						<p>
 							<span class="alignright">
