Slide sobre Acerca de

--- a/slides/index.html
+++ b/slides/index.html
@@ -18,7 +18,7 @@
 
 	<!-- SEO -->
 	<title>Aprendiendo VueJS: Un ejemplo práctico de cómo usarlo
-		
+
 	</title>
 	<meta name="description" content="WebSlides is the easiest way to make HTML presentations, portfolios, and landings. Just essential features.">
 
@@ -85,6 +85,7 @@
 	<main role="main">
 		<article id="webslides">
 
+			<!-- Slide: Portada -->
 			<section class="bg-black-blue aligncenter">
 				<span class="background dark" style="background-image:url('static/images/bg/cover.jpg')"></span>
 				<div class="wrap">
@@ -109,6 +110,23 @@
 						</p>
 					</div>
 				</footer>
+			</section>
+
+			<!-- Slide: Acerca de -->
+			<section class="fullscreen bg-primary">
+				<div class="card-50">
+					<div class="flex-content">
+						<h2>Jose Dongil</h2>
+						<p>> Desarrollador Web</p>
+						<p class="text-intro">
+							Escribo sobre Desarrollo del Software y JavaScript en
+							<strong>el.abismo = de[null]</strong>
+						</p>
+					</div>
+					<figure>
+						<img src="static/images/me.jpg" alt="Me">
+					</figure>
+				</div>
 			</section>
 
 		</article>
