--- a/slides/index.html
+++ b/slides/index.html
@@ -129,6 +129,34 @@
 				</div>
 			</section>
 
+			<!-- Slide: Gracias -->
+			<section class="fullscreen bg-black-blue aligncenter">
+				<div class="embed dark">
+					<video autoplay loop>
+						<source src="static/gifs/thanks.mp4" type="video/mp4">
+					</video>
+				</div>
+				<div class="wrap">
+					<h1 class="text-landing text-shadow">
+						<strong>Gracias</strong>
+					</h1>
+				</div>
+				<footer>
+					<div class="wrap">
+						<p>
+							<span class="alignright">
+								<a href="https://github.com/jdonsan/charla-aprendiendo-vuejs" target="_blank">
+									<svg class="fa-twitter">
+									<use xlink:href="#fa-twitter"></use>
+									</svg>
+									@jdonsan
+								</a>
+							</span>
+						</p>
+					</div>
+				</footer>
+			</section>
+
 		</article>
 
 	</main>
