Slides para introduccion

--- a/slides/index.html
+++ b/slides/index.html
@@ -121,16 +121,52 @@
 
 			<!-- Slide: Bloque 1 -->
 			<section class="bg-primary">
-				<span class="background dark" style="background-image:url('static/images/bg/block.jpg')"></span>
+				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE I</p>
 					<h2><strong class="bg-light">INTRODUCCIÓN</strong></h2>
 				</div>
 			</section>
 
+			<!-- Slide: ¿Otro framework más? ¿Por qué? -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>¿Otro <strong class="bg-light">framework</strong> más?</h2>
+					<img class="size-70" src="static/images/frameworks.png" alt="¿otro framework?" />
+				</div>
+			</section>
+
+			<!-- Slide: ¿Framework progresivo? -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Puedo incluir funcionalidad de forma <strong class="bg-light">progresiva</strong></h2>
+					<img class="size-70" src="static/images/components.png" alt="Arbol de componentes">
+				</div>
+			</section>
+
+			<!-- Slide: ¿Arbol de componentes? -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Nuestra web como un <strong class="bg-light">árbol de componentes</strong></h2>
+					<img class="size-70" src="static/images/components.png" alt="Arbol de componentes">
+				</div>
+			</section>
+
+			<!-- Slide: ¿Reactivo? -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>El sistema trabaja de forma <strong class="bg-light">reactiva</strong></h2>
+					<div style="margin-top: 3rem;">
+						<video autoplay loop>
+							<source src="static/gifs/reactive.mp4" type="video/mp4">
+						</video>
+					</div>
+				</div>
+			</section>
+
 			<!-- Slide: Bloque 2 -->
 			<section class="bg-primary">
-				<span class="background dark" style="background-image:url('static/images/bg/block.jpg')"></span>
+				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE II</p>
 					<h2><strong class="bg-light">PRACTIQUEMOS UN POCO</strong></h2>
@@ -139,7 +175,7 @@
 
 			<!-- Slide: Bloque 3 -->
 			<section class="bg-primary">
-				<span class="background dark" style="background-image:url('static/images/bg/block.jpg')"></span>
+				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE III</p>
 					<h2><strong class="bg-light">CONCLUSIONES</strong></h2>
