--- a/slides/index.html
+++ b/slides/index.html
@@ -164,6 +164,14 @@
 				</div>
 			</section>
 
+			<!-- Slide: ¿Reactivo? -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Reacciona a <strong class="bg-light">cambios de estado</strong> para <strong class="bg-light">repintar vistas</strong></h2>
+					<img class="size-70" src="static/images/mvvm.png" alt="Motor de render">
+				</div>
+			</section>
+
 			<!-- Slide: Bloque 2 -->
 			<section class="bg-primary">
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
