Backgraounds genericos en blanco

--- a/slides/index.html
+++ b/slides/index.html
@@ -145,7 +145,7 @@
 			</section>
 
 			<!-- Slide: ¿Arbol de componentes? -->
-			<section>
+			<section class="bg-white">
 				<div class="wrap aligncenter">
 					<h2>Nuestra web como un <strong class="bg-light">árbol de componentes</strong></h2>
 					<img class="size-70" src="static/images/components.png" alt="Arbol de componentes">
@@ -153,7 +153,7 @@
 			</section>
 
 			<!-- Slide: ¿Reactivo? -->
-			<section>
+			<section class="bg-white">
 				<div class="wrap aligncenter">
 					<h2>El sistema trabaja de forma <strong class="bg-light">reactiva</strong></h2>
 					<div style="margin-top: 3rem;">
@@ -165,7 +165,7 @@
 			</section>
 
 			<!-- Slide: ¿Reactivo? -->
-			<section>
+			<section class="bg-white">
 				<div class="wrap aligncenter">
 					<h2>Reacciona a <strong class="bg-light">cambios de estado</strong> para <strong class="bg-light">repintar vistas</strong></h2>
 					<img class="size-70" src="static/images/mvvm.png" alt="Motor de render">
