--- a/slides/index.html
+++ b/slides/index.html
@@ -179,7 +179,7 @@
 					<p class="text-context">BLOQUE II</p>
 					<h2><strong class="bg-light">PRACTIQUEMOS UN POCO</strong></h2>
 				</div>
-			</section>
+			</section>			
 
 			<!-- Slide: Bloque 3 -->
 			<section class="bg-primary">
@@ -187,6 +187,51 @@
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE III</p>
 					<h2><strong class="bg-light">CONCLUSIONES</strong></h2>
+				</div>
+			</section>
+
+			<!-- Slide: Recursos -->
+			<section class="bg-white">
+				<div class="wrap aligncenter">
+					<h2>Si te gusta lo que ves, apunta estos <strong class="bg-secondary">recursos</strong></h2>
+					<div class="content-center">
+						<ul class="flexblock specs">
+							<li>
+								<div>
+									<svg class="fa-github">
+										<use xlink:href="#fa-github"></use>
+									</svg>
+									<h2>Awesome VueJS</h2>
+									<a href="https://github.com/vuejs/awesome-vue" alt="Awesome VueJS" target="_blank">
+									Enlace oficial
+								</a>
+								</div>
+							</li>
+							<li>
+								<div>
+									<svg class="fa-youtube">
+										<use xlink:href="#fa-youtube"></use>
+									</svg>
+									<h2>Curso de VueJS y Firebase de Juan Andrés Núñez</h2>
+									<a href="http://wmedia.teachable.com/p/aprende-vue2-y-firebase-paso-a-paso" alt="Curso de VueJS" target="_blank">
+									Listado de vídeos
+								</a>
+								</div>
+							</li>
+							<li>
+								<div>
+									<svg class="fa-book">
+										<use xlink:href="#fa-book"></use>
+									</svg>
+									<h2>Learning VueJS</h2>
+									<a href="https://www.amazon.es/dp/1786469944?tag=pymlk3g3kr-20" alt="Libro de VueJS" target="_blank">
+									Página oficial
+								</a>
+
+								</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 
