Slides pros vs contras

--- a/slides/index.html
+++ b/slides/index.html
@@ -179,7 +179,7 @@
 					<p class="text-context">BLOQUE II</p>
 					<h2><strong class="bg-light">PRACTIQUEMOS UN POCO</strong></h2>
 				</div>
-			</section>			
+			</section>
 
 			<!-- Slide: Bloque 3 -->
 			<section class="bg-primary">
@@ -190,10 +190,60 @@
 				</div>
 			</section>
 
+			<!-- Slide: Lo que NO me gusta de VueJS -->
+			<section class="bg-white">
+				<div class="wrap">
+					<h2>Lo que <strong class="bg-secondary">NO</strong> me gusta</h2>
+					<ul class="flexblock steps">
+						<li>
+							<h2>01. Passion</h2>
+							<p>When you're really passionate about your job, you can change the world.</p>
+						</li>
+						<li>
+							<div class="process step-2"></div>
+
+							<h2>02. Purpose</h2>
+							<p>Why does this business exist? How are you different? Why matters?</p>
+						</li>
+						<li>
+							<div class="process step-3"></div>
+
+							<h2>03. Principles</h2>
+							<p>Leadership through usefulness, openness, empathy, and good taste.</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<!-- Slide: Lo que SI me gusta de VueJS -->
+			<section>
+				<div class="wrap">
+					<h2>Lo que <strong class="bg-primary">SÍ</strong> me gusta</h2>
+					<ul class="flexblock steps">
+						<li>
+							<h2>01. Passion</h2>
+							<p>When you're really passionate about your job, you can change the world.</p>
+						</li>
+						<li>
+							<div class="process step-2"></div>
+
+							<h2>02. Purpose</h2>
+							<p>Why does this business exist? How are you different? Why matters?</p>
+						</li>
+						<li>
+							<div class="process step-3"></div>
+
+							<h2>03. Principles</h2>
+							<p>Leadership through usefulness, openness, empathy, and good taste.</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+
 			<!-- Slide: Recursos -->
 			<section class="bg-white">
 				<div class="wrap aligncenter">
-					<h2>Si te gusta lo que ves, apunta estos <strong class="bg-secondary">recursos</strong></h2>
+					<h2>Si te apetece saber más, apunta estos <strong class="bg-light">recursos</strong></h2>
 					<div class="content-center">
 						<ul class="flexblock specs">
 							<li>
