--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>cinema-paradiso-codenares</title>
+    <title>CODENARES - Cinema Paradiso</title>
   </head>
   <body>
     <div id="app"></div>
