--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Codenares Cinema Paradiso</title>
+    <title>Codenares Paradiso</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="app"></div>
