Cambio en slide About

--- a/slides/index.html
+++ b/slides/index.html
@@ -103,19 +103,37 @@
 			</section>
 
 			<!-- Slide: Acerca de -->
-			<section class="fullscreen bg-primary">
-				<div class="card-50">
-					<div class="flex-content">
-						<h2>Jose Dongil</h2>
-						<p>> Desarrollador Web</p>
-						<p class="text-intro">
-							Escribo sobre Desarrollo del Software y JavaScript en
-							<strong>el.abismo = de[null]</strong>
-						</p>
+			<section class="">
+				<div class="wrap">
+					<div class="card-50 bg-white">
+						<figure>
+							<img src="static/images/jdonsan.png" alt="me">
+							<figcaption>
+								<a href="https://www.twitter.com/jdonsan" title="Me">
+									<svg class="fa-camera">
+										<use xlink:href="#fa-camera"></use>
+									</svg>
+									Avatar de @oneeyesman
+								</a>
+							</figcaption>
+						</figure>
+						<div class="flex-content">
+							<h2>
+								Jose Dongil
+							</h2>
+							<p>> Desarrollador Web</p>
+							<ul class="description">
+								<li>
+									<strong class="text-label">Email:</strong> jose.dongil@gmail.com</sup>
+								</li>
+								<li><strong class="text-label">Twitter:</strong> @jdonsan</li>
+								<li><strong class="text-label">Website:</strong> el.abismo = de[null]</li>
+							</ul>
+							<p>
+								Desarrollando se vive mejor
+							</p>
+						</div>
 					</div>
-					<figure>
-						<img src="static/images/me.jpg" alt="Me">
-					</figure>
 				</div>
 			</section>
 
