Slide plataforma vue

--- a/slides/index.html
+++ b/slides/index.html
@@ -158,7 +158,14 @@
 			<section>
 				<div class="wrap aligncenter">
 					<h2>Puedo incluir funcionalidad de forma <strong class="bg-light">progresiva</strong></h2>
-					<img class="size-70" src="static/images/components.png" alt="Arbol de componentes">
+					<img class="size-70" src="static/images/plataforma-vue-1.png" alt="Plataforma Vue">
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<h2>En la charla nos centraremos en <strong class="bg-light">SPA Medias</strong></h2>
+					<img class="size-70" src="static/images/plataforma-vue-2.png" alt="Plataforma Vue">
 				</div>
 			</section>
 
