Añadidos pros y contras a las slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -113,7 +113,7 @@
 									<svg class="fa-camera">
 										<use xlink:href="#fa-camera"></use>
 									</svg>
-									Avatar de @oneeyesman
+									Avatar de @oneeyedman
 								</a>
 							</figcaption>
 						</figure>
@@ -221,19 +221,19 @@
 					<h2>Lo que <strong class="bg-secondary">NO</strong> me gusta</h2>
 					<ul class="flexblock steps">
 						<li>
-							<h2>01. Passion</h2>
+							<h2>01. No Web Components</h2>
 							<p>When you're really passionate about your job, you can change the world.</p>
 						</li>
 						<li>
 							<div class="process step-2"></div>
 
-							<h2>02. Purpose</h2>
+							<h2>02. Todavía bastante configuración</h2>
 							<p>Why does this business exist? How are you different? Why matters?</p>
 						</li>
 						<li>
 							<div class="process step-3"></div>
 
-							<h2>03. Principles</h2>
+							<h2>03. Testing y mutaciones</h2>
 							<p>Leadership through usefulness, openness, empathy, and good taste.</p>
 						</li>
 					</ul>
@@ -246,19 +246,19 @@
 					<h2>Lo que <strong class="bg-primary">SÍ</strong> me gusta</h2>
 					<ul class="flexblock steps">
 						<li>
-							<h2>01. Passion</h2>
+							<h2>01. API intuitiva</h2>
 							<p>When you're really passionate about your job, you can change the world.</p>
 						</li>
 						<li>
 							<div class="process step-2"></div>
 
-							<h2>02. Purpose</h2>
+							<h2>02. Sin dependencias de terceros</h2>
 							<p>Why does this business exist? How are you different? Why matters?</p>
 						</li>
 						<li>
 							<div class="process step-3"></div>
 
-							<h2>03. Principles</h2>
+							<h2>03. Comunidad muy activa</h2>
 							<p>Leadership through usefulness, openness, empathy, and good taste.</p>
 						</li>
 					</ul>
