Slides de como empezar con vue

--- a/slides/index.html
+++ b/slides/index.html
@@ -206,6 +206,20 @@
 				</div>
 			</section>
 
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/como-empezar-vue.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
 			<!-- Slide: Bloque 3 -->
 			<section class="bg-primary">
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
