Estructura de bloque 2 y videos incluidos en las slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -206,6 +206,7 @@
 				</div>
 			</section>
 
+			<!-- Slides: Cómo empiezo -->
 			<section class="fullscreen">
 				<div class="embed">
 					<video autoplay loop>
@@ -214,9 +215,98 @@
 				</div>
 			</section>
 
+			<!-- Slide: Estructura de ficheros -->
 			<section>
 				<div class="wrap aligncenter">
 					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<!-- Slide: Fichero raiz -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Nuestra Webapp empieza por <strong class="bg-light">MAIN.JS</strong></h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<!-- Slide: Estructura de mi aplicación -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Explosión de <strong class="bg-light">componentes</strong></h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<h2>Explosión de <strong class="bg-light">componentes</strong></h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<!-- Slide: Estructura de un componente -->
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/fichero-vue.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<!-- Slide: Templates y directivas -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2><strong class="bg-light">Templates</strong> y directivas</h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<!-- Slide: Estado y métodos -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2><strong class="bg-light">Estado</strong> y métodos</h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/estado-vue.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/event-vue.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<!-- Slide: Comunicación de componentes -->
+			<section>
+				<div class="wrap aligncenter">
+					<h2><strong class="bg-light">Comunicación</strong> entre componentes</h2>
+					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/props-vue.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop>
+						<source src="static/videos/comunication-vue.mp4" type="video/mp4">
+					</video>
 				</div>
 			</section>
 
