--- a/slides/index.html
+++ b/slides/index.html
@@ -442,6 +442,28 @@
 				</div>
 			</section>
 
+			<section>
+				<div class="wrap aligncenter">
+					<pre>
+        import Vue from 'vue';
+        import Router from 'vue-router';
+        import HomeView from '@/views/home-view.vue';
+        import AboutView from '@/views/about-view.vue';
+        import MovieView from '@/views/movie-view.vue';
+
+        Vue.use(Router);
+	
+        export default new Router({
+            routes: [
+                { path: '/', name: 'home', component: HomeView },
+                { path: '/about', name: 'about', component: AboutView },
+                { path: '/movie/:movieId', name: 'movie-detail', component: MovieView, props: true }
+            ]
+        });
+					</pre>
+				</div>
+			</section>
+
 			<!-- Slide: Bloque 3 -->
 			<section class="bg-primary">
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
